# snake-fury

./: .gitignore  .gitpod.Dockerfile  .gitpod.yaml  .gitpod.yml  .hlint.yaml  ChangeLog.md  LICENSE  README.md  package.yaml  snake-exe-lineBuffering.eventlog.html  snake-exe.eventlog-NoBuffering.html  snake-fury.cabal  snake.cabal  stack-ghc-8.10.7.yaml  stack-ghc-9.0.2.yaml  stack-ghc-9.2.5.yaml  stack.yaml
app/: Main.hs  snake-fury-ascii.hs  snake-fury-sdl.hs  snake-gui.hs  snake-tui.hs
exercises/: refactor-1.md  refactor-2.md  refactor-3.md  refactor-4.md  refactor-5.md
src/: App.hs  Board.hs  EventQueue.hs  GUI.hs  GameState.hs  Initialization.hs  RenderState.hs  Snake.hs  TUI.hs
src/frontends/ascii/: Renderer.hs
src/frontends/brick/: Renderer.hs
src/frontends/sdl/: Renderer.hs
src/sdl/: GUI.hs
