cabal-version:  3.0
name:           snake-fury
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lsmor/snake-fury#readme>
homepage:       https://github.com/lsmor/snake-fury#readme
bug-reports:    https://github.com/lsmor/snake-fury/issues
author:         Luis Morillo Najarro
copyright:      2021 Luis Morillo Najarro
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/lsmor/snake-fury

library
  exposed-modules:
      App
      EventQueue
      RenderState
      GameState
      TUI
      Initialization
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      src
  default-extensions:
      StrictData
  build-depends:
      base >=4.14 && < 5
    , BoundedChan
    , array
    , bytestring
    , containers
    , transformers
    , mtl
    , random
  default-language: Haskell2010

library gui
  exposed-modules:
      GUI
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      src/sdl
  default-extensions:
      StrictData
  build-depends:
    , base >=4.14 && < 5
    , snake-fury
    , sdl2 ^>= 2.5.3.0
    , sdl2-ttf ^>= 2.1.2
    , array
    , mtl
    , text
    , linear
    , BoundedChan
  default-language: Haskell2010

executable snake-gui
  main-is: snake-gui.hs
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      app
  default-extensions:
      StrictData
  ghc-options: -rtsopts -Wall -Wunused-imports
  build-depends:
      snake-fury
    , gui
    , base >=4.14 && < 5
    , sdl2 ^>= 2.5.3.0
    , sdl2-ttf ^>= 2.1.2
  default-language: Haskell2010

executable snake-tui
  main-is: snake-tui.hs
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      app
  default-extensions:
      StrictData
  ghc-options: -threaded -rtsopts -Wall
  build-depends:
      base
    , snake-fury
    , bytestring
  default-language: Haskell2010

